[package]
name = "gobuild"
version = "0.1.0-alpha.2"
authors = ["Mike Yagley <myagley@gmail.com>"]
license = "MIT"
repository = "https://github.com/myagley/gobuild"
homepage = "https://github.com/myagley/gobuild"
documentation = "https://docs.rs/gobuild"
description = """
A build-time dependency for Cargo build scripts to invoke the
go compiler to compile go code into a static archive/dynamic library
to be linked into Rust code.
"""
keywords = ["build-dependencies"]
readme = "README.md"
categories = ["development-tools::build-utils"]
edition = "2018"
